# EscolaSistema

./: .gitignore  ARCHITECTURE.md  README.md
.github/: copilot-instructions.md
backend/: .env  .env.example  package-lock.json  package.json  railway.json  tsconfig.json
backend/data/: escola.db-shm  escola.db-wal
backend/prisma/: dev.db  schema.prisma  seed.ts
backend/src/: server.ts
backend/src/controllers/: alunoController.ts  authController.ts  escolaController.ts  financeiroController.ts  historicoEscolarController.ts  index.ts  notaController.ts  professorController.ts  responsavelController.ts  turmaController.ts  usuarioController.ts
backend/src/database/: connection.ts  migrate.ts  seed.ts
backend/src/middlewares/: authMiddleware.ts  errorHandler.ts  index.ts  validateMiddleware.ts
backend/src/routes/: alunoRoutes.ts  authRoutes.ts  escolaRoutes.ts  financeiroRoutes.ts  historicoEscolarRoutes.ts  index.ts  notaRoutes.ts  professorRoutes.ts  responsavelRoutes.ts  turmaRoutes.ts  usuarioRoutes.ts
backend/src/services/: alunoService.ts  authService.ts  escolaService.ts  financeiroService.ts  historicoEscolarService.ts  index.ts  notaService.ts  professorService.ts  responsavelService.ts  turmaService.ts  usuarioService.ts
backend/src/types/: index.ts
backend/src/utils/: formatters.ts  index.ts  logger.ts  (+1 more)
frontend/: Dockerfile  index.html  package-lock.json  package.json  railway.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
(+189 files in other folders)
