[package]
name = "escola-sistema"
version = "1.0.0"
description = "Sistema de Gestão Escolar"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.3", features = ["dialog-all", "fs-all", "http-all", "path-all", "shell-open", "window-all"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
